[package]
name = "ws2811-spi"
version = "0.1.1"
authors = ["Axel Chabot <axel.chabot@lefrenchpoc.fr>","David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2811"]
description = "SPI-based driver for ws2811 chips"
documentation = "https://docs.rs/crate/ws2811-spi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LeFrenchPOC/ws2811-spi-rs"

[dependencies]
nb = "0.1.3"
smart-leds-trait = "0.2.0"
embedded-hal = "0.2.4"

[features]
mosi_idle_high = []
